# stag-cv2

./: .gitignore  CMakeLists.txt  main.cpp
scripts/: gen_board.py
src/: Drawer.cpp  PoseRefiner.cpp  Stag.cpp
src/ED/: ED.cpp  GradientOperators.cpp  GradientOperatorsCV.h  ImageSmooth.cpp  ImageSmoothCV.h  Utilities.cpp  Utilities.h
